force-app/main/default/objects/VehicleAssetEnrgyUse/VehicleAssetEnrgyUse.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>