force-app/main/default/objects/VehicleAssetEnrgyUse/fields/Accrual__c.field-meta.xml
<CustomField>
    <fullName>Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation (), This field is created to Check Whether the data is Actual or Estimated:</description>
    <label>Accrual</label>
    <type>Checkbox</type>
</CustomField>