force-app/main/default/objects/VehicleAssetEnrgyUse/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <description>AJ: Created for NZC Implementation (), This field is created to capture Actual Data:</description>
    <formula>IF(Accrual__c == false,  FuelConsumption , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is auto Generated field.</inlineHelpText>
    <label>Actual Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>