force-app/main/default/objects/VehicleAssetEnrgyUse/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>SB: Created this field to store the comments</description>
    <label>Comment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>