force-app/main/default/objects/VehicleAssetEnrgyUse/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <description>AJ: Created for NZC Implementation (), This field is created to capture Accrual / Estimated Data:</description>
    <formula>IF(Accrual__c == true,  FuelConsumption , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is auto Generated field.</inlineHelpText>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>