force-app/main/default/objects/VehicleAssetEnrgyUse/fields/Procurement_Emissions_Factor_Set__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Emissions_Factor_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ: Created for NZC Implementation, This field is created to capture Procurement Emission Factor Set:</description>
    <label>Procurement Emissions Factor Set WTT</label>
    <referenceTo>PcmtEmssnFctrSet</referenceTo>
    <relationshipLabel>Vehicle Asset Energy Use</relationshipLabel>
    <relationshipName>Vehicle_Asset_Energy_Use</relationshipName>
    <type>Lookup</type>
</CustomField>