force-app/main/default/objects/VehicleAssetEnrgyUse/listViews/All_VehicleAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>All_VehicleAssetEnrgyUse</fullName>
    <columns>Name</columns>
    <columns>FuelType</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Scope1EmissionsInTco2e</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FuelType</field>
        <operation>equals</operation>
        <value>Electricity</value>
    </filters>
    <label>All Vehicle Asset Energy Uses</label>
</ListView>